# ClawGlove

./: .gitignore  AGENTS.md  README.md  REPORT.md  SKILL.md  THREAT_MODEL.md  cgbench_certification_report.md  docker-compose.yml  fix2.py  fix3.py  fix_etcd.py  fix_harness.py  manifest.yaml  otel-collector-config.yaml  pyproject.toml  show_l1.py  show_l1_out.txt
.git-hooks/: pre-commit
.github/workflows/: verify.yml
cgbench/: __init__.py  discovery.py  metrics.py  runner.py
cgbench/layers/: contamination.py  drift.py  persistence.py  provenance.py  replay_integrity.py  resilience.py  runtime.py
clawglove/events/: kafka_store.py
clawglove/interfaces/: __init__.py
clawglove/metrics/: otel_telemetry.py
clawglove/policies/: compiler.py  engine.py
clawglove/provenance/: __init__.py  client.py  exceptions.py  ledger.py  rotate.py  sync.py  watchdog.py
clawglove/runtime/: etcd_coordinator.py
clawglove/sidecar/: _explorer_html.py  client.py  daemon.py  escalation.py  http_proxy.py
clawglove/tenants/: container_isolation.py
docker/: Dockerfile.agent-test  Dockerfile.sidecar  agent_harness.py  isolation_test.py  otel-collector-config.yaml  start-sidecar.sh
docs/: REPORT.md  jules_complete_cli_manual.md
policies/: director.yaml  screenwriter.yaml  tenant_alpha.yaml
rfcs/: RFC-003-context-provenance-tracking.md
scripts/: cgbench_docker.ps1  test_failclosed.ps1
simulations/: run_all.sh
simulations/chaos/: chaos_008_openclaw_containment.py
tests/: run_eval_isolated.py
tests/eval/: run_empirical_eval.py
(+17 files in other folders)
