[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clawglove"
version = "0.1.0"
description = "Governed execution substrate for autonomous AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Navakanth"}]

dependencies = [
    "confluent-kafka>=2.3.0",
    "etcd3>=0.12.0",
    "docker>=7.0.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-otlp>=1.24.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.23.0"]

[project.scripts]
clawglove-daemon = "clawglove.sidecar.daemon:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["clawglove*", "cgbench*"]
